# gpu-infer

./: Cargo.toml  LICENSE  README.md  SPIKE-PLAN.md  bench_vllm.py  build.rs
examples/: spike_batch_decode.rs  spike_continuous_batch.rs  spike_engine.rs  spike_generate.rs  spike_multi_generate.rs  spike_single_decode.rs
kernels/: wrapper.cu  wrapper.h
src/: engine.rs  lib.rs  scheduler.rs
src/attention/: mod.rs
src/backend/: llama_cpp.rs  mod.rs
src/pool/: kv_cache.rs  mod.rs
